# PiHub

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  cmake_uninstall.cmake.in  pihub.service
docs/: Requirements.md  ToDo.md  architecture.drawio  testing_guidelines.md
include/app/: app.h  dispatcher.h  parser.h  sysstat.h
include/comm/: network.h
include/hw/: gpio.h  hw_interface.h  i2c_bus.h  sensor.h  spi_bus.h
include/sensors/: bme280.h  bme280_regs.h  sensor.h  sensors_config.h
include/utils/: common.h  config.h  list.h  log.h
src/: CMakeLists.txt  main.c
src/app/: app.c  dispatcher.c  parser.c  sysstat.c
src/comm/: network.c
src/hw/: gpio.c  hw_interface.c  i2c_bus.c
src/sensors/: bme280.c
src/utils/: list.c  log.c
tests/: CMakeLists.txt  test_piHub.c
tests/app/: test_dispatcher.c  test_parser.c
tests/comm/: test_network.c
tests/mocks/: pthread_mocks.c  pthread_mocks.h
tests/sensors/: test_bme280.c
tests/utils/: test_llist.c
tools/: plot_temperature.py  stress_test.py
